# Data_ML_AI

./: .gitignore  1_Word2vec.ipynb  README.md  hello_world.ipynb  main.py  pyproject.toml  test_openai.py  update_nb.py
data_visual/: 01-03-2026.ipynb  07_03_2026.ipynb  class1.ipynb
langchain_learn/: langchain.md
langchain_learn/CH1/: 1_Basic.ipynb  2_Messages.ipynb  3_Structured_Outputs.ipynb
langchain_learn/CH2/: 1_first_chain.ipynb  2_chain_with_customRunnable.ipynb  3_parallel_chains.ipynb  4_conditional_chains.ipynb
langchain_learn/CH3/: init.py  select_data.py
langchain_learn/CH3/SalesDB/: sales.db
langchain_learn/Models/: models.ipynb
numpy_class/: 15-02-2026 (2).ipynb
rag/: 1.0_RAG_With_Own_Text.ipynb  2.0_RAG_PDF.ipynb  3.0_RAG_Local_Persist.ipynb  modular_rag_pipeline.py
sample/: flatten_orders.py  flatten_orders_class.py  samplePrg.py
